k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netflex-edge
---
apiVersion: v1
kind: Namespace
metadata:
  name: netflex-origin
---
apiVersion: v1
kind: Namespace
metadata:
  name: netflex-aiops
---
apiVersion: v1
kind: Namespace
metadata:
  name: netflex-monitoring
