k8s/10-secure-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflex-portal
  namespace: netflex-origin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflex-portal
  template:
    metadata:
      labels:
        app: netflex-portal
    spec:
      containers:
      - name: portal
        image: python:3.11-slim
        command:
        - /bin/sh
        - -c
        - |
          pip install --no-cache-dir flask
          mkdir -p /media
          python3 /app/app.py
        volumeMounts:
        - name: app-code
          mountPath: /app
        - name: media-storage
          mountPath: /media
        resources:
          limits:
            cpu: "300m"
            memory: "250Mi"
          requests:
            cpu: "50m"
            memory: "100Mi"
      volumes:
      - name: app-code
        configMap:
          name: portal-app
      - name: media-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: netflex-portal
  namespace: netflex-origin
spec:
  selector:
    app: netflex-portal
  ports:
  - port: 8080
    targetPort: 8080
